--- a/WebBasic/src/main/webapp/day02/01_form.html
+++ b/WebBasic/src/main/webapp/day02/01_form.html
@@ -15,9 +15,9 @@
           保密<input type="radio" name="sex" value="3"/><br/><br/>           
           爱好有:
           <input type="checkbox" name="love" value="0"/>看电视
-          <input type="checkbox" name="love" value="1"/>睡觉
+          <input type="checkbox" name="love" value="1"/>睡觉觉
           <input type="checkbox" name="love" value="2"/>打游戏
-          <input type="checkbox" name="love" value="3"/>打球<br/><br/>
+          <input type="checkbox" name="love" value="3"/>打球球<br/><br/>
           籍贯:
           <select name="provinces">
               <optgroup label="华北区">
